# dockerized-prefect

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.auto  dockerized_flow.py  entrypoint.sh  main.py  prefect.yaml  pyproject.toml
